<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="154dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:contentDescription="@string/my_profille_pic"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/abioola"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="296dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/yakubu_abiola"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="222dp"
            android:layout_height="33dp"
            android:layout_gravity="clip_vertical|center_vertical"
            android:layout_marginLeft="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:foregroundGravity="center_vertical"
            android:gravity="clip_vertical|center_vertical"
            android:text="@string/track_android"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="222dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_vertical"
            android:text="@string/country_nigeria"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="336dp"
            android:layout_height="34dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_vertical"
            android:text="@string/email_yakubuabiola2003_gmail_com"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="222dp"
            android:layout_height="33dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_vertical"
            android:text="@string/phone_2348030960928"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="344dp"
            android:layout_height="33dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/slack_username_yakubuabiola"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>